[package]
name = "cch23-snap"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.3.1"
base64 = "0.21.5"
chrono = "0.4.31"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-actix-web = "0.35.0"
shuttle-persist = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
ulid = { version = "1.1.0", features = ["uuid", "serde"] }
uuid = { version = "1.6.1", features = ["v1"] }
