[package]
name = "cch23-snap"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
base64 = "0.21.5"
chrono = "0.4.31"
derive_more = "0.99.17"
hex = "0.4.3"
image = "0.24.7"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
s2 = "0.0.12"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
shuttle-actix-web = "0.35.0"
shuttle-persist = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.2"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tar = "0.4.40"
tokio = "1.26.0"
ulid = { version = "1.1.0", features = ["uuid", "serde"] }
uuid = { version = "1.6.1", features = ["v1"] }
